tests/NormalTests/paczka1/fuzzy1/94724472.err
Error in line 4: S115 A317 12,3
Error in line 5: BBXPQsvqS5i A317 4,1
Error in line 7: BBXPQsvqS5i A686 4,9
Error in line 12: gv5GOZ49 S115 10,1
Error in line 14: BBXPQsvqS5i S115 204
Error in line 17: WilckXwWR S115 37,9
Error in line 22: UQkW6FIk A686 29,9
Error in line 3: 7vFrcWeA7iA A317 31,2
Error in line 34: WilckXwWR A296 22,1
